# badminton-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: ranking-analyst.md
claude-plugin/commands/: compare.md  player.md  search.md  top.md  update.md
claude-plugin/skills/badminton-cli/: SKILL.md
plugin/: README.md
plugin/agents/: ranking-analyst.md
plugin/commands/: compare.md  player.md  search.md  top.md  update.md
plugin/skills/badminton-cli/: SKILL.md
plugin/skills/badminton-cli/references/: commands.md  json-structures.md
src/badminton_cli/: __init__.py  __main__.py  cli.py  config.py
src/badminton_cli/data/: __init__.py  database.py  downloader.py  parser.py
src/badminton_cli/models/: __init__.py  player.py
src/badminton_cli/search/: __init__.py  fuzzy.py
src/badminton_cli/ui/: __init__.py  console.py  graphs.py  interactive.py  panels.py  tables.py
src/badminton_cli/utils/: __init__.py  json_output.py  points.py
tests/: test_config.py
