[project]
name = "badminton-cli"
version = "0.1.0"
description = "Beautiful console application for German U19 badminton rankings"
readme = "README.md"
authors = [
    { name = "Paulo Matos", email = "pmatos@igalia.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.25",
    "openpyxl>=3.1",
    "rapidfuzz>=3.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
badminton-cli = "badminton_cli.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
