[project]
name = "badminton-cli"
version = "0.1.0"
description = "Beautiful console application for German U19 badminton rankings"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Paulo Matos", email = "pmatos@igalia.com" }
]
keywords = ["badminton", "rankings", "dbv", "cli", "sports", "germany"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.25",
    "openpyxl>=3.1",
    "rapidfuzz>=3.0",
    "platformdirs>=4.0",
    "plotext>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
badminton-cli = "badminton_cli.cli:main"

[project.urls]
Homepage = "https://github.com/pmatos/badminton-cli"
Repository = "https://github.com/pmatos/badminton-cli"
Issues = "https://github.com/pmatos/badminton-cli/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
